--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-i18next": "^16.5.4",
-    "recharts": "^3.7.0"
+    "recharts": "^3.7.0",
+    "socket.io-client": "^4.8.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
