--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@google/genai": "^1.40.0",
+    "csv-parser": "^3.2.0",
     "flatpickr": "^4.6.13",
     "i18next": "^25.8.4",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.563.0",
+    "mysql2": "^3.17.2",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-i18next": "^16.5.4",
