--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.40.0",
+    "axios": "^1.13.5",
     "csv-parser": "^3.2.0",
     "flatpickr": "^4.6.13",
     "i18next": "^25.8.4",
