--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-i18next": "^16.5.4",
+    "react-select": "^5.10.2",
     "recharts": "^3.7.0",
     "socket.io-client": "^4.8.3"
   },
